fixed spacing

--- a/animated-ads-portfolio-vite/src/index.css
+++ b/animated-ads-portfolio-vite/src/index.css
@@ -122,8 +122,8 @@ section p {
 }
 
 .bannerpage {
-  height: 110vh;
-  margin-top: 5rem;
+  height: 100vh;
+  margin-top: 3rem;
 }
 
 #page3 {
